--- a/dasturlar/project-ijara.html
+++ b/dasturlar/project-ijara.html
@@ -92,7 +92,7 @@
      </section>
 
      <div class="full-image text-center" data-aos="zoom-in">
-       <img src="../images/yangi/ijaraAsosiy.PNG" class="img-fluid shadow" alt="interview process">
+       <img src="../images/projects/1/ijaraAsosiy.PNG" class="img-fluid shadow" alt="interview process">
      </div>
 
      <!-- PROJECT DETAIL -->
@@ -102,7 +102,7 @@
 
                   <div class="col-lg-6 col-md-6 col-12 mb-5 text-center">
 
-                      <img src="../images/yangi/ijaraNamuna.png" class="img-fluid" alt="personal website" data-aos="fade-up">
+                      <img src="../images/projects/1/ijaraNamuna.png" alt="personal website" data-aos="fade-up">
                     </div>
 
                     <div class="col-lg-5 col-md-6 mr-lg-auto mt-lg-5 col-12" data-aos="fade-up" data-aos-delay="200">
