--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 
                          <div class="owl-carousel owl-theme" id="project-slide">
                               <div class="item project-wrapper" data-aos="fade-up" data-aos-delay="100">
-                                   <img src="images/yangi/ijara1.PNG" class="img-fluid image1" alt="project image">
+                                   <img src="images/projects/1/ijara1.PNG" class="img-fluid image1" alt="project image">
 
                                    <div class="project-info">
                                         <small>Ijarachilar web sayti</small>
@@ -166,24 +166,24 @@
                                         </h3>
                                    </div>
                               </div>
-<!-- 
+
                               <div class="item project-wrapper" data-aos="fade-up">
-                                   <img src="images/yangi/dastur2.png" class="img-fluid image1" alt="project image">
+                                   <img src="images/projects/2/orgtex.png" class="img-fluid image1" alt="project image">
 
                                    <div class="project-info">
-                                        <small>Arxiv ma'lumotlar bazasi</small>
+                                        <small>Orgtexnika ma'lumotlar bazasi</small>
 
                                         <h3>
-                                             <a href="dasturlar/project-arxiv.html">
+                                             <a href="dasturlar/project-orgtex.html">
                                                   <span>Batafsil ma'lumot...</span>
                                                   <i class="fa fa-angle-right project-icon"></i>
                                              </a>
                                         </h3>
                                    </div>
-                              </div> -->
+                              </div>
 
                               <div class="item project-wrapper" data-aos="fade-up">
-                                   <img src="images/yangi/dastur5.png" class="img-fluid image1" alt="project image">
+                                   <img src="images/projects/3/ARMbot.png" class="img-fluid image1" alt="project image">
 
                                    <div class="project-info">
                                         <small>Axborot resurs markazi telegram boti</small>
@@ -198,7 +198,7 @@
                               </div>
 
                               <div class="item project-wrapper" data-aos="fade-up">
-                                   <img src="images/yangi/dastur3.png" class="img-fluid image1" alt="project image">
+                                   <img src="images/projects/4/kadr.png" class="img-fluid image1" alt="project image">
 
                                    <div class="project-info">
                                         <small>Kadrlar bo'limi</small>
@@ -213,7 +213,7 @@
                               </div>
 
                               <div class="item project-wrapper" data-aos="fade-up">
-                                   <img src="images/yangi/dastur6.png" class="img-fluid image1" alt="project image">
+                                   <img src="images/projects/5/surov.png" class="img-fluid image1" alt="project image">
 
                                    <div class="project-info">
                                         <small>ADU so'rovnoma olish web sayti</small>
@@ -228,22 +228,7 @@
                               </div>
 
                               <div class="item project-wrapper" data-aos="fade-up">
-                                   <img src="images/yangi/dastur4.png" class="img-fluid image1" alt="project image">
-
-                                   <div class="project-info">
-                                        <small>Orgatexnika ma'lumotlari bazai</small>
-
-                                        <h3>
-                                             <a href="dasturlar/project-orgtex.html">
-                                                  <span>Batafsil ma'lumot...</span>
-                                                  <i class="fa fa-angle-right project-icon"></i>
-                                             </a>
-                                        </h3>
-                                   </div>
-                              </div>
-
-                              <div class="item project-wrapper" data-aos="fade-up">
-                                   <img src="images/yangi/dastur7.png" class="img-fluid image1" alt="project image">
+                                   <img src="images/projects/6/utishBall.png" class="img-fluid image1" alt="project image">
 
                                    <div class="project-info">
                                         <small>ADU o'tish ballari</small>
@@ -258,7 +243,7 @@
                               </div>
                               
                               <div class="item project-wrapper" data-aos="fade-up">
-                                   <img src="images/yangi/dastur8.png" class="img-fluid image1" alt="project image">
+                                   <img src="images/projects/7/lugat.png" class="img-fluid image1" alt="project image">
 
                                    <div class="project-info">
                                         <small>Psixologik izohli lug'at</small>
@@ -272,7 +257,7 @@
                               </div>
 
                               <div class="item project-wrapper" data-aos="fade-up">
-                                   <img src="images/yangi/dastur9.png" class="img-fluid image1" alt="project image">
+                                   <img src="images/projects/8/glossary.png" class="img-fluid image1" alt="project image">
 
                                    <div class="project-info">
                                         <small>Universal Glossary</small>
@@ -455,6 +440,20 @@
                                    </div>
                               </div>
 
+                              <div class="item project-wrapper" data-aos="fade-up">
+                                   <img src="images/yangi/dastur21.jpg" class="img-fluid image1" alt="project image">
+
+                                   <div class="project-info">
+                                        <small>Hamkor.adu.uz</small>
+                                        <h3>
+                                             <a href="dasturlar/project-orgtex.html">
+                                                  <span>Batafsil ma'lumot...</span>
+                                                  <i class="fa fa-angle-right project-icon"></i>
+                                             </a>
+                                        </h3>
+                                   </div>
+                              </div>
+
                          </div>
                     </div>
                </div>
@@ -492,54 +491,6 @@
                </div>
           </div>
      </section>
-
-     <!-- <div class="container-fluid">
-          <div class="owl-carousel owl-theme" id="project-slide">
-             <div class="item project-wrapper" data-aos="fade-up" data-aos-delay="100">
-                  <img src="images/yangi/ijara1.PNG" class="img-fluid image1" alt="project image">
-
-                  <div class="project-info">
-                       <small>Ijarachilar web sayti</small>
-
-                       <h3>
-                            <a href="dasturlar/project-ijara.html">
-                                 <span>Batafsil ma'lumot...</span>
-                                 <i class="fa fa-angle-right project-icon"></i>
-                            </a>
-                       </h3>
-                  </div>
-             </div>
-             <div class="item project-wrapper" data-aos="fade-up" data-aos-delay="100">
-                  <img src="images/yangi/ijara1.PNG" class="img-fluid image1" alt="project image">
-
-                  <div class="project-info">
-                       <small>Ijarachilar web sayti</small>
-
-                       <h3>
-                            <a href="dasturlar/project-ijara.html">
-                                 <span>Batafsil ma'lumot...</span>
-                                 <i class="fa fa-angle-right project-icon"></i>
-                            </a>
-                       </h3>
-                  </div>
-             </div>
-             <div class="item project-wrapper" data-aos="fade-up" data-aos-delay="100">
-                  <img src="images/yangi/ijara1.PNG" class="img-fluid image1" alt="project image">
-
-                  <div class="project-info">
-                       <small>Ijarachilar web sayti</small>
-
-                       <h3>
-                            <a href="dasturlar/project-ijara.html">
-                                 <span>Batafsil ma'lumot...</span>
-                                 <i class="fa fa-angle-right project-icon"></i>
-                            </a>
-                       </h3>
-                  </div>
-             </div>
-          </div>
-        </div> -->
-
 
     <footer class="site-footer">
       <div class="container">
