--- a/dasturlar/project-anketa.html
+++ b/dasturlar/project-anketa.html
@@ -90,7 +90,7 @@
      </section>
 
      <div class="full-image text-center" data-aos="zoom-in">
-       <img src="../images/yangi/dastur6Asosiy.png" class="img-fluid shadow" alt="interview process">
+       <img src="../images/projects/5/surovAsosiy.png" class="img-fluid shadow" alt="interview process">
      </div>
 
      <!-- PROJECT DETAIL -->
@@ -100,7 +100,7 @@
 
                   <div class="col-lg-6 col-md-6 col-12 mb-5 text-center">
 
-                      <img src="../images/yangi/dastur6Qo'shimcha.png" class="img-fluid shadow" alt="personal website" data-aos="fade-up" data-aos-delay="200">
+                      <img src="../images/projects/5/surovQo'shimcha.png" class="img-fluid shadow" alt="personal website" data-aos="fade-up" data-aos-delay="200">
                     </div>
 
                     <div class="col-lg-5 col-md-6 mr-lg-auto mt-lg-5 col-12" data-aos="fade-up" data-aos-delay="300">
