--- a/dasturlar/project-izohliLugat.html
+++ b/dasturlar/project-izohliLugat.html
@@ -88,7 +88,7 @@
                       <div class="row mt-2 mt-md-3 mt-lg-5 align-items-center">
                         <div class="full-image text-center col-md-5 mb-5 mb-md-2" data-aos="zoom-in">
                           <a href="https://play.google.com/store/apps/details?id=com.quar.test1" target="_blank">
-                            <img src="../images/yangi/dastur8Asosiy.webp" class="img-fluid shadow" alt="interview process">
+                            <img src="../images/projects/7/lugatAsosiy.png" class="img-fluid shadow" alt="interview process">
                           </a>
                         </div>
                         <h1 class="col-md-7">1 000+ dan ortiq psixologik atamalarning izohli ma'nolarini bilib oling!</h1>
@@ -117,7 +117,7 @@
 
                   <div class="col-md-5 col-12 text-center">
                     <a href="https://play.google.com/store/apps/details?id=com.quar.test1" target="_blank">
-                      <img src="../images/yangi/dastur8Qosh.webp" class="img-fluid shadow mt-5" alt="personal website" data-aos="zoom-in">
+                      <img src="../images/projects/7/lugatQosh.png" class="img-fluid shadow mt-5" alt="personal website" data-aos="zoom-in">
                     </a>
                   </div>
                </div>
