--- a/dasturlar/project-kadr.html
+++ b/dasturlar/project-kadr.html
@@ -90,7 +90,7 @@
      </section>
 
      <div class="full-image text-center" data-aos="zoom-in">
-       <img src="../images/yangi/dastur3Asosiy.png" class="img-fluid shadow" alt="interview process">
+       <img src="../images/projects/4/kadrAsosiy.png" alt="interview process">
      </div>
 
      <!-- PROJECT DETAIL -->
@@ -100,7 +100,7 @@
 
                   <div class="col-lg-6 col-md-6 col-12 mb-5 text-center pt-5">
 
-                      <img src="../images/yangi/dastur3Qo'shimcha.png" class="img-fluid shadow mt-5" alt="personal website" data-aos="fade-up">
+                      <img src="../images/projects/4/kadrQo'shimcha.png" class="img-fluid shadow mt-5" alt="personal website" data-aos="fade-up">
                     </div>
 
                     <div class="col-lg-5 col-md-6 mr-lg-auto col-12" data-aos="fade-up" data-aos-delay="200">
