--- a/dasturlar/project-universalGlossary.html
+++ b/dasturlar/project-universalGlossary.html
@@ -87,7 +87,7 @@
                       <div class="row mt-2 mt-md-3 mt-lg-5 align-items-center">
                         <div class="full-image text-center col-md-5 mb-5 mb-md-2" data-aos="zoom-in">
                           <a href="https://play.google.com/store/apps/details?id=com.codearteam.lugat_v2" target="_blank">
-                            <img src="../images/yangi/dastur9Asosiy.webp" class="img-fluid shadow" alt="interview process">
+                            <img src="../images/projects/8/glossaryAsosiy.png" class="img-fluid shadow" alt="interview process">
                           </a>
                         </div>
                         <h1 class="col-md-7">O'quvchilar uchun eng kerakli fanlardan atamalar universal glossariyasi!</h1>
@@ -118,7 +118,7 @@
 
                   <div class="col-md-5 col-12 text-center">
                     <a href="https://play.google.com/store/apps/details?id=com.codearteam.lugat_v2" target="_blank">
-                      <img src="../images/yangi/dastur9Qosh.webp" class="img-fluid shadow mt-5" alt="personal website" data-aos="zoom-in">
+                      <img src="../images/projects/8/glossaryQosh.png" class="img-fluid shadow mt-5" alt="personal website" data-aos="zoom-in">
                     </a>
                   </div>
 
