--- a/dasturlar/project-kompLingvis.html
+++ b/dasturlar/project-kompLingvis.html
@@ -88,7 +88,7 @@
                       <div class="row mt-2 mt-md-3 mt-lg-5 align-items-center">
                         <div class="full-image text-center col-md-5 mb-5 mb-md-2" data-aos="zoom-in">
                           <a href="https://play.google.com/store/apps/details?id=uz.coderteam.kompyuterlingvistikasi" target="_blank">
-                            <img src="../images/yangi/dastur10Asosiy.webp" class="img-fluid shadow" alt="interview process">
+                            <img src="../images/projects/9/lingvisAsosiy.png" class="img-fluid shadow" alt="interview process">
                           </a>
                         </div>
                         <h1 class="col-md-7">150+ dan ortiq sahifadan iborat <strong>"Kompyuter lingvistikasi asoslari"</strong> fanidan to'liq ma'lumot beruvchi elektron darslikdan foydalaning!</h1>
@@ -116,7 +116,7 @@
                   </div>
                   <div class="col-md-5 col-12 text-center">
                     <a href="https://play.google.com/store/apps/details?id=uz.coderteam.kompyuterlingvistikasi" target="_blank">
-                      <img src="../images/yangi/dastur10Qosh.webp" class="img-fluid shadow mt-5" alt="personal website" data-aos="zoom-in">
+                      <img src="../images/projects/9/lingvisQosh.png" class="img-fluid shadow mt-5" alt="personal website" data-aos="zoom-in">
                     </a>
                   </div>
                </div>
