--- a/dasturlar/project-opinion.html
+++ b/dasturlar/project-opinion.html
@@ -88,7 +88,7 @@
                       <div class="row mt-2 mt-md-3 mt-lg-5 align-items-center">
                         <div class="full-image text-center col-md-5 mb-5 mb-md-2" data-aos="zoom-in">
                           <a href="https://play.google.com/store/apps/details?id=uz.codearteam.asuopinionpoll" target="_blank">
-                            <img src="../images/yangi/dastur11Asosiy.webp" class="img-fluid shadow" alt="interview process">
+                            <img src="../images/projects/10/opinionAsosiy.png" class="img-fluid shadow" alt="interview process">
                           </a>
                         </div>
                         <h1 class="col-md-7">Bu dastur <strong>Andijon davlat universiteti</strong>da mavjud bo'limlar olib borayotgan faoliyatini xolis baholash uchun ishlab chiqildi!</h1>
@@ -117,23 +117,11 @@
 
                   <div class="col-md-5 col-12 text-center">
                     <a href="https://play.google.com/store/apps/details?id=uz.codearteam.asuopinionpoll" target="_blank">
-                      <img src="../images/yangi/dastur11Qosh.webp" class="img-fluid shadow mt-5" alt="personal website" data-aos="zoom-in">
+                      <img src="../images/projects/10/opinionQosh.png" class="img-fluid shadow mt-5" alt="personal website" data-aos="zoom-in">
                     </a>
                   </div>
 
                </div>
-
-              <!-- <div class="col-lg-9 mx-auto col-12" data-aos="fade-up">
-                <div class="client-info mt-lg-5 py-lg-5">
-                    <h3>Curabitur egestas mollis tellus sit amet porttitor. Sed leo nisl, posuere at molestie ac, suscipit auctor mauris. Etiam quis metus elementum, tempor risus vel.</h3>
-
-                    <div class="d-flex align-items-center mt-3">
-                      <img src="../images/project/project-detail/male-avatar.png" class="img-fluid" alt="male avatar">
-
-                      <p>Angelo Sharp, Creative Director</p>
-                    </div>
-                </div>
-              </div> -->
           </div>
      </section>
 
