images correction finished

--- a/blog.html
+++ b/blog.html
@@ -90,7 +90,7 @@
 
 
      <div class="full-image text-center" data-aos="zoom-in" style="padding: .4rem !important;">
-       <img src="images/yangi/startUp0.png" width="100%" class="img-fluid shadow-lg" alt="blog header">
+       <img src="images/startUp0.png" width="100%" class="img-fluid shadow-lg" alt="blog header">
      </div>
 
 
