--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                           <div class="hero-image" data-aos="fade-up" data-aos-delay="300">
 
                             <!-- <img src="images/working-girl.png" class="img-fluid" alt="working girl"> -->
-                            <img src="images/yangi/pngegg.png" class="img-fluid" alt="working boy">
+                            <img src="images/pngegg.png" class="img-fluid" alt="working boy">
                           </div>
                         </div>
 
@@ -440,7 +440,7 @@
                                    </div>
                               </div>
 
-                              <div class="item project-wrapper" data-aos="fade-up">
+                              <!-- <div class="item project-wrapper" data-aos="fade-up">
                                    <img src="images/yangi/dastur21.jpg" class="img-fluid image1" alt="project image">
 
                                    <div class="project-info">
@@ -452,7 +452,7 @@
                                              </a>
                                         </h3>
                                    </div>
-                              </div>
+                              </div> -->
 
                          </div>
                     </div>
@@ -468,7 +468,7 @@
                     <div class="col-lg-6 col-md-5 col-12">
                         <div class="contact-image" data-aos="fade-up">
 
-                          <img src="images/yangi/Lamp.png" width="60%" class="img-fluid" style="margin-left: 50px; margin-top: 100px;" alt="website">
+                          <img src="images/Lamp.png" width="60%" class="img-fluid" style="margin-left: 50px; margin-top: 100px;" alt="website">
                         </div>
                     </div>
 
