--- a/index.html
+++ b/index.html
@@ -440,19 +440,19 @@
                                    </div>
                               </div>
 
-                              <!-- <div class="item project-wrapper" data-aos="fade-up">
-                                   <img src="images/yangi/dastur21.jpg" class="img-fluid image1" alt="project image">
+                              <div class="item project-wrapper" data-aos="fade-up">
+                                   <img src="images/projects/21/hamkor.png" class="img-fluid image1" alt="project image">
 
                                    <div class="project-info">
                                         <small>Hamkor.adu.uz</small>
                                         <h3>
-                                             <a href="dasturlar/project-orgtex.html">
+                                             <a href="dasturlar/project-hamkor.html">
                                                   <span>Batafsil ma'lumot...</span>
                                                   <i class="fa fa-angle-right project-icon"></i>
                                              </a>
                                         </h3>
                                    </div>
-                              </div> -->
+                              </div>
 
                          </div>
                     </div>
