kimyo va oila huquqi dasturlari qo'shildi

--- a/dasturlar/project-oilaHuquqi.html
+++ b/dasturlar/project-oilaHuquqi.html
@@ -81,26 +81,30 @@
                     <div class="mx-auto mt-lg-5 text-center" data-aos="fade-up">
 
                       <h3 class="mb-2 mb-md-3 mb-lg-4 pb-2 pb-md-4">
-                        <a href="https://play.google.com/store/apps/details?id=com.quar.adu_hemis_student" target="_blank">
-                          AndDU Student
+                        <a href="https://play.google.com/store/apps/details?id=uz.mexboy.oila_huquqi" target="_blank">
+                            Oila huquqi
                         </a>
                       </h3>
                       <div class="row mt-2 mt-md-3 mt-lg-5 align-items-center">
                         <div class="full-image text-center col-md-5 mb-5 mb-md-2" data-aos="zoom-in">
-                          <a href="https://play.google.com/store/apps/details?id=com.quar.adu_hemis_student" target="_blank">
-                            <img src="../images/projects/17/aduHemisAsosiy.png" style="border-radius: 4%;" class="img-fluid shadow" alt="interview process">
+                          <a href="https://play.google.com/store/apps/details?id=uz.mexboy.oila_huquqi" target="_blank">
+                            <img src="../images/projects/23/oilaHuquqiAsosiy.png" class="img-fluid shadow" style="border-radius: 5%;" alt="interview process">
                           </a>
                         </div>
-                        <h1 class="col-md-7">Bu dastur <strong>Andijon davlat universiteti</strong>
-                          talabalari uchun HEMIS tizimidan oson va qulay tarzda foydalanish maqsadida ishlab chiqildi!</h1>
+                        <!-- <h1 class="col-md-7">Bu dastur <strong>Andijon davlat universiteti</strong>
+                          talabalari "Ta'limda axborot texnologiyalar" fanidan mustaqil ta'lim olishlari uchun yaratildi!</h1> -->
+                          <h1 class="col-md-7">
+                            <strong>Oila huquqi (5111600) </strong>- Milliy g'oya, ma'naviyat asoslari va huquq ta'limi ta'lim yo'nalishi bakalavr talabalari va barcha foydalanuvchilar uchun elektron o'quv qo'llanma
+                          </h1>
                       </div>
                       
                     </div>
+
             </div>
           </div>
      </section>
 
-     <!-- PROJECT DETAIL -->
+     
      <section class="project-detail pb-5">
           <div class="container">
                <div class="row"  data-aos="fade-up">
@@ -110,19 +114,20 @@
 
                   <div class="col-md-6 col-12 mt-3 mt-md-0 mb-md-1 p-2 pt-md-4 d-flex flex-column justify-content-center">
 
-                      <h2 class="text-center text-md-left">Dasturning qulayliklari...</h2>
+                      <h2 class="text-center text-md-left">Dastur imkoniyatlari...</h2>
 
-                      <p class="mt-4 mb-4" style="text-indent: 1.5rem;">Sizga taklif etilayotgan ushbu dastur orqali siz <a href="https://student.adu.uz" target="_blank">student.adu.uz</a> (HEMIS tizimi) platformasida mavjud talaba profilidan foydalanishingiz mumkin. Dastur tizimga kirishdagi muammo va tushunmovchiliklarni bartaraf etadi. Talabalar bu dasturdan yordamida fanlar o'quv rejalari, dars jadvali, nazoratlar jadvali, fanlar resurslari, davomat, o'zlashtirish, imtihonlar va boshqa o'quv jarayoni haqidagi asosiy ma'lumotlarni olishlari mumkin.
-                      <br />
-                      <a href="https://play.google.com/store/apps/details?id=com.quar.adu_hemis_student" target="_blank" style="text-decoration: underline;">
-                        Yuklab olish...
-                      </a>
+                      <p class="mt-4 mb-4" style="text-indent: 1.5rem;">Qo'llanmada oila huquqi fanining asosiy tushuncha va tasdiqlari yoritilgan bo'lib, unda 
+                        bu fanning ilmiy dolzarbligi ham yoritilgan. Ushbu qo'llanmadan 
+                        oila huquqi fani o'qitiladigan barcha oliy o'quv yurtlarining professor-o'qituvchilari va 
+                        talabalari foydalanishlari mumkin.<br>
+                          <a href="https://play.google.com/store/apps/details?id=uz.mexboy.oila_huquqi" target="_blank" style="text-decoration: underline;">
+                            Yuklab olish...</a>
                       </p>
                   </div>
 
                   <div class="col-md-5 col-12 text-center">
-                    <a href="https://play.google.com/store/apps/details?id=com.quar.adu_hemis_student" target="_blank">
-                      <img src="../images/projects/17/aduHemisQosh.png" style="border-radius: 4%;" class="img-fluid mt-5 shadow" alt="personal website" data-aos="zoom-in">
+                    <a href="https://play.google.com/store/apps/details?id=uz.mexboy.oila_huquqi" target="_blank">
+                      <img src="../images/projects/23/oilaHuquqiQosh.png" class="img-fluid shadow mt-5" style="border-radius: 5%;" alt="personal website" data-aos="zoom-in">
                     </a>
                   </div>
 
