--- a/dasturlar/project-psix_anketa.html
+++ b/dasturlar/project-psix_anketa.html
@@ -84,7 +84,7 @@
                       <div class="row mt-2 mt-md-3 mt-lg-5 align-items-center">
                         <div class="full-image text-center col-md-5 mb-5 mb-md-2" data-aos="zoom-in">
                           <a href="https://play.google.com/store/apps/details?id=uz.quar.anketa" target="_blank">
-                            <img src="../images/projects/12/anketaAsosiy.png" class="img-fluid shadow" alt="interview process">
+                            <img src="../images/projects/12/anketaAsosiy.png" style="border-radius: 4%;" class="img-fluid shadow" alt="interview process">
                           </a>
                         </div>
                         <h1 class="col-md-7">Bu dastur <strong>Andijon davlat universiteti</strong> uchun psixologik so'rovlar o'tkazish va tahlil qilish maqsadida ishlab chiqildi!</h1>
@@ -113,7 +113,7 @@
 
                   <div class="col-md-5 col-12 text-center">
                     <a href="https://play.google.com/store/apps/details?id=uz.quar.anketa" target="_blank">
-                      <img src="../images/projects/12/anketaQosh.png" class="img-fluid shadow mt-5" alt="personal website" data-aos="zoom-in">
+                      <img src="../images/projects/12/anketaQosh.png" style="border-radius: 4%;" class="img-fluid shadow mt-5" alt="personal website" data-aos="zoom-in">
                     </a>
                   </div>
 
