--- a/index.html
+++ b/index.html
@@ -454,6 +454,34 @@
                                    </div>
                               </div>
 
+                              <div class="item project-wrapper" data-aos="fade-up">
+                                   <img src="images/projects/22/kimyo.png" class="img-fluid image1" alt="project image">
+
+                                   <div class="project-info">
+                                        <small>Umumiy kimyo</small>
+                                        <h3>
+                                             <a href="dasturlar/project-kimyo.html">
+                                                  <span>Batafsil ma'lumot...</span>
+                                                  <i class="fa fa-angle-right project-icon"></i>
+                                             </a>
+                                        </h3>
+                                   </div>
+                              </div>
+                              
+                              <div class="item project-wrapper" data-aos="fade-up">
+                                   <img src="images/projects/23/oilaHuquqi.png" class="img-fluid image1" alt="project image">
+
+                                   <div class="project-info">
+                                        <small>Oila huquqi</small>
+                                        <h3>
+                                             <a href="dasturlar/project-oilaHuquqi.html">
+                                                  <span>Batafsil ma'lumot...</span>
+                                                  <i class="fa fa-angle-right project-icon"></i>
+                                             </a>
+                                        </h3>
+                                   </div>
+                              </div>
+
                          </div>
                     </div>
                </div>
