--- a/dasturlar/project-diagMadaniyat.html
+++ b/dasturlar/project-diagMadaniyat.html
@@ -88,7 +88,7 @@
                       <div class="row mt-2 mt-md-3 mt-lg-5 align-items-center">
                         <div class="full-image text-center col-md-5 mb-5 mb-md-2" data-aos="zoom-in">
                           <a href="https://play.google.com/store/apps/details?id=uz.ecms.madaniyat" target="_blank">
-                            <img src="../images/projects/13/madaniyatAsosiy.png" class="img-fluid shadow" alt="interview process">
+                            <img src="../images/projects/13/madaniyatAsosiy.png" style="border-radius: 4%;" class="img-fluid shadow" alt="interview process">
                           </a>
                         </div>
                         <h1 class="col-md-7">Bu dastur <strong>Andijon davlat universiteti</strong> uchun talabalar o'rtasida turli mavzulardagi testlar va anketalar o'tkazish maqsadida ishlab chiqildi!</h1>
@@ -117,7 +117,7 @@
 
                   <div class="col-md-5 col-12 text-center">
                     <a href="https://play.google.com/store/apps/details?id=uz.ecms.madaniyat" target="_blank">
-                      <img src="../images/projects/13/madaniyatQosh.png" class="img-fluid shadow mt-5" alt="personal website" data-aos="zoom-in">
+                      <img src="../images/projects/13/madaniyatQosh.png" style="border-radius: 4%;" class="img-fluid shadow mt-5" alt="personal website" data-aos="zoom-in">
                     </a>
                   </div>
 
