--- a/dasturlar/project-hamkor.html
+++ b/dasturlar/project-hamkor.html
@@ -80,7 +80,11 @@
 
                     <div class="col-lg-9 mx-auto col-md-10 col-12 mt-lg-5 text-center" data-aos="fade-up">
 
-                      <h4>Hamkor.adu.uz</h4>
+                      <h4>
+                        <a href="http://hamkor.adu.uz/" target="_blank">
+                          Hamkor.adu.uz
+                        </a>
+                      </h4>
 
                       <h1>ADU Xalqaro hamkorlik bo‘limi rasmiy web sayti!</h1>
                     </div>
@@ -100,7 +104,7 @@
 
                   <div class="col-lg-6 col-md-6 col-12 mb-5 text-center">
 
-                      <img src="../images/projects/21/hamkorQosh.png" style="height: 120%" class="img-fluid shadow" alt="personal website" data-aos="fade-up" data-aos-delay="200">
+                      <img src="../images/projects/21/hamkorQosh.png" style="height: 120%; border-radius: 4%;" class="img-fluid shadow" alt="personal website" data-aos="fade-up" data-aos-delay="200">
                     </div>
 
                     <div class="col-lg-5 col-md-6 mr-lg-auto mt-lg-5 col-12" data-aos="fade-up" data-aos-delay="300">
