--- a/dasturlar/project-utishBall.html
+++ b/dasturlar/project-utishBall.html
@@ -87,7 +87,7 @@
                       </h3>
                       <div class="row mt-2 mt-md-3 mt-lg-5 align-items-center">
                         <div class="full-image text-center col-md-5 mb-5 mb-md-2" data-aos="zoom-in">
-                            <img src="../images/projects/6/utishBallAsosiy.png" class="img-fluid shadow" alt="interview process">
+                            <img src="../images/projects/6/utishBallAsosiy.png" style="border-radius: 4%;" class="img-fluid shadow" alt="interview process">
                         </div>
                         <h1 class="col-md-7">2018-yilgi o'quv yilidan, ADU ning 50 ortiq yo'nalishlar bo'yicha o'tish ballarini hoziroq bilib oling!</h1>
                       </div>
@@ -116,7 +116,7 @@
                       </ul>
                   </div>
                   <div class="col-md-5 col-12 text-center">
-                      <img src="../images/projects/6/utishBallQoshimcha.png" class="img-fluid shadow mt-5" alt="personal website" data-aos="zoom-in">
+                      <img src="../images/projects/6/utishBallQoshimcha.png" class="img-fluid shadow mt-5" style="border-radius: 4%;" alt="personal website" data-aos="zoom-in">
                   </div>
 
                   <div class="col-md-1">
