--- a/dasturlar/project-suvOtlari.html
+++ b/dasturlar/project-suvOtlari.html
@@ -81,20 +81,20 @@
                     <div class="mx-auto mt-lg-5 text-center" data-aos="fade-up">
 
                       <h3 class="mb-2 mb-md-3 mb-lg-4 pb-2 pb-md-4">
-                        <a href="https://play.google.com/store/apps/details?id=uz.mexboy.oila_huquqi" target="_blank">
-                            Oila huquqi
+                        <a href="https://play.google.com/store/apps/details?id=uz.quar.suv_otlari" target="_blank">
+                            Andijon tuproq suv o'tlari
                         </a>
                       </h3>
                       <div class="row mt-2 mt-md-3 mt-lg-5 align-items-center">
                         <div class="full-image text-center col-md-5 mb-5 mb-md-2" data-aos="zoom-in">
-                          <a href="https://play.google.com/store/apps/details?id=uz.mexboy.oila_huquqi" target="_blank">
-                            <img src="../images/projects/23/oilaHuquqiAsosiy.png" class="img-fluid shadow" style="border-radius: 5%;" alt="interview process">
+                          <a href="https://play.google.com/store/apps/details?id=uz.quar.suv_otlari" target="_blank">
+                            <img src="../images/projects/25/suvOtlariAsosiy.png" class="img-fluid shadow" style="border-radius: 5%;" alt="interview process">
                           </a>
                         </div>
                         <!-- <h1 class="col-md-7">Bu dastur <strong>Andijon davlat universiteti</strong>
                           talabalari "Ta'limda axborot texnologiyalar" fanidan mustaqil ta'lim olishlari uchun yaratildi!</h1> -->
                           <h1 class="col-md-7">
-                            <strong>Oila huquqi (5111600) </strong>- Milliy g'oya, ma'naviyat asoslari va huquq ta'limi ta'lim yo'nalishi bakalavr talabalari va barcha foydalanuvchilar uchun elektron o'quv qo'llanma
+                            <strong>Tuproq suvo'tlari </strong>turlari va ular haqidagi batafsil ma'lumotlarni bu dasturdan topishingiz mumkin.
                           </h1>
                       </div>
                       
@@ -114,20 +114,17 @@
 
                   <div class="col-md-6 col-12 mt-3 mt-md-0 mb-md-1 p-2 pt-md-4 d-flex flex-column justify-content-center">
 
-                      <h2 class="text-center text-md-left">Dastur imkoniyatlari...</h2>
+                      <h2 class="text-center text-md-left">Dastur haqida...</h2>
 
-                      <p class="mt-4 mb-4" style="text-indent: 1.5rem;">Qo'llanmada oila huquqi fanining asosiy tushuncha va tasdiqlari yoritilgan bo'lib, unda 
-                        bu fanning ilmiy dolzarbligi ham yoritilgan. Ushbu qo'llanmadan 
-                        oila huquqi fani o'qitiladigan barcha oliy o'quv yurtlarining professor-o'qituvchilari va 
-                        talabalari foydalanishlari mumkin.<br>
-                          <a href="https://play.google.com/store/apps/details?id=uz.mexboy.oila_huquqi" target="_blank" style="text-decoration: underline;">
+                      <p class="mt-4" style="text-indent: 1.5rem;">Bu dastur Andijon Davlat Universiteti biologlari buyurtmasi asosida ishlab chiqilgan bo'lib, unda tuproq suvo'tlarining kam uchraydigan turlari va ularning kelib chiqishi haqida ma'lumot olish mumkin. <br>
+                          <a href="https://play.google.com/store/apps/details?id=uz.quar.suv_otlari" target="_blank" style="text-decoration: underline;">
                             Yuklab olish...</a>
                       </p>
                   </div>
 
                   <div class="col-md-5 col-12 text-center">
-                    <a href="https://play.google.com/store/apps/details?id=uz.mexboy.oila_huquqi" target="_blank">
-                      <img src="../images/projects/23/oilaHuquqiQosh.png" class="img-fluid shadow mt-5" style="border-radius: 5%;" alt="personal website" data-aos="zoom-in">
+                    <a href="https://play.google.com/store/apps/details?id=uz.quar.suv_otlari" target="_blank">
+                      <img src="../images/projects/25/suvOtlariQosh.png" class="img-fluid shadow mt-5" style="border-radius: 5%;" alt="personal website" data-aos="zoom-in">
                     </a>
                   </div>
 
