--- a/index.html
+++ b/index.html
@@ -523,6 +523,34 @@
                                         </h3>
                                    </div>
                               </div>
+                              
+                              <div class="item project-wrapper" data-aos="fade-up">
+                                   <img src="images/projects/27/mantiqiy.png" class="img-fluid image1" alt="Mantiqiy masalalar">
+
+                                   <div class="project-info">
+                                        <small>Mantiqiy masalalar</small>
+                                        <h3>
+                                             <a href="dasturlar/project-mantiqiy.html">
+                                                  <span>Batafsil ma'lumot...</span>
+                                                  <i class="fa fa-angle-right project-icon"></i>
+                                             </a>
+                                        </h3>
+                                   </div>
+                              </div>
+                              
+                              <div class="item project-wrapper" data-aos="fade-up">
+                                   <img src="images/projects/28/kolloidKimyo.png" class="img-fluid image1" alt="Kolloid kimyo">
+
+                                   <div class="project-info">
+                                        <small>Kolloid kimyo</small>
+                                        <h3>
+                                             <a href="dasturlar/project-kolloid.html">
+                                                  <span>Batafsil ma'lumot...</span>
+                                                  <i class="fa fa-angle-right project-icon"></i>
+                                             </a>
+                                        </h3>
+                                   </div>
+                              </div>
 
                          </div>
                     </div>
