--- a/index.html
+++ b/index.html
@@ -551,6 +551,20 @@
                                         </h3>
                                    </div>
                               </div>
+                              
+                              <div class="item project-wrapper" data-aos="fade-up">
+                                   <img src="images/projects/29/tatNew.png" class="img-fluid image1" alt="Talimda axborot texnologiyalar">
+
+                                   <div class="project-info">
+                                        <small>Talimda axborot texnologiyalar</small>
+                                        <h3>
+                                             <a href="dasturlar/project-tatNew.html">
+                                                  <span>Batafsil ma'lumot...</span>
+                                                  <i class="fa fa-angle-right project-icon"></i>
+                                             </a>
+                                        </h3>
+                                   </div>
+                              </div>
 
                          </div>
                     </div>
