--- a/dasturlar/project-tatNew.html
+++ b/dasturlar/project-tatNew.html
@@ -80,23 +80,22 @@
                     <div class="mx-auto mt-lg-5 text-center" data-aos="fade-up">
 
                       <h3 class="mb-2 mb-md-3 mb-lg-4 pb-2 pb-md-4">
-                        <a href="https://play.google.com/store/apps/details?id=uz.mexboy.kolloid_kimyo" target="_blank">
-                            Kolloid kimyo
+                        <a href="https://play.google.com/store/apps/details?id=uz.mexboy.TAT" target="_blank">
+                            Talimda axborot texnologiyalar
                         </a>
                       </h3>
                       <div class="row mt-2 mt-md-3 mt-lg-5 align-items-center">
                         <div class="full-image text-center col-md-5 mb-5 mb-md-2" data-aos="zoom-in">
-                          <a href="https://play.google.com/store/apps/details?id=uz.mexboy.kolloid_kimyo" target="_blank">
-                            <img src="../images/projects/28/kolloidKimyoAsosiy.png" class="img-fluid shadow" style="border-radius: 5%;" alt="interview process">
+                          <a href="https://play.google.com/store/apps/details?id=uz.mexboy.TAT" target="_blank">
+                            <img src="../images/projects/29/tatNewAsosiy.png" class="img-fluid shadow" style="border-radius: 5%;" alt="interview process">
                           </a>
                         </div>
                         <!-- <h1 class="col-md-7">Bu dastur <strong>Andijon davlat universiteti</strong>
                           talabalari "Ta'limda axborot texnologiyalar" fanidan mustaqil ta'lim olishlari uchun yaratildi!</h1> -->
                           <h1 class="col-md-7">
-                            <strong>Kolloid kimyo </strong> Oliy o‘quv yurtlari talabalari uchun android qurilmalarda foydalanish uchun o‘quv qo‘llanma
+                            <strong>Talimda axborot texnologiyalar </strong> Oliy o‘quv yurtlari talabalari uchun android qurilmalarda foydalanish uchun o‘quv qo‘llanma
                           </h1>
                       </div>
-                      
                     </div>
 
             </div>
@@ -114,20 +113,23 @@
 
                       <h2 class="text-center text-md-left">Dastur haqida...</h2>
 
-                      <p class="mt-4" style="text-indent: 1.5rem;">Ushbu elektron qo'llanma Kolloid kimyo fanidan ma'ruza va amaliy dars mashg'ulotlarini olib borish uchun android tizimlarida ishlovchi mobil ilova ko'rinishida ishlab chiqildi. OTM talabalari, professor-o'qituvchilar va kimyo faniga qiziquvchi o'quvchilar undan foydalanishlari mumkin.</p>
+                      <p class="mt-4">5112200 – Makrabgacha va boshlangich ta'limda xorijiy til (tillar bo'yicha), <br>
+                        5111400 – xorijiy til va adabiyoti (tillar bo'yicha) <br>
+                        5120100 – Filologiya va tillarni o'qitish (rimsko-germanskaya filologiya), <br>
+                        5120200 – Tarjima nazariyasi va amaliyoti (tillar bo'yicha), <br>
+                        5121200 – Madaniyatlararo komunikatsiyalarning lingvistik ta'minoti (tillar bo'yicha) bakalavr ta'lim yo'nalishi talabalari uchun elektron darslik</p>
                       <p style="text-indent: 1.5rem;">
-                        Bu elektron qo'llanma I. Asqarov, Q. Otaxonov va A. Xojiqulovlarning muallifligi asosida yaratildi. <br>
-                          <a href="https://play.google.com/store/apps/details?id=uz.mexboy.kolloid_kimyo" target="_blank" style="text-decoration: underline;">
+                        Bu elektron qo'llanma Z. Madaminovning muallifligi asosida yaratildi. <br>
+                          <a href="https://play.google.com/store/apps/details?id=uz.mexboy.TAT" target="_blank" style="text-decoration: underline;">
                             Yuklab olish...</a>
                       </p>
                   </div>
 
                   <div class="col-md-5 col-12 text-center">
-                    <a href="https://play.google.com/store/apps/details?id=uz.mexboy.kolloid_kimyo" target="_blank">
-                      <img src="../images/projects/28/kolloidKimyoQosh.png" class="img-fluid shadow mt-5" style="border-radius: 5%;" alt="personal website" data-aos="zoom-in">
+                    <a href="https://play.google.com/store/apps/details?id=uz.mexboy.TAT" target="_blank">
+                      <img src="../images/projects/29/tatNewQosh.png" class="img-fluid shadow mt-5" style="border-radius: 5%;" alt="personal website" data-aos="zoom-in">
                     </a>
                   </div>
-
                </div>
           </div>
      </section>
