--- a/dasturlar/project-matem.html
+++ b/dasturlar/project-matem.html
@@ -80,20 +80,18 @@
                     <div class="mx-auto mt-lg-5 text-center" data-aos="fade-up">
 
                       <h3 class="mb-2 mb-md-3 mb-lg-4 pb-2 pb-md-4">
-                        <a href="https://play.google.com/store/apps/details?id=uz.mexboy.TAT" target="_blank">
-                            Ta'limda axborot texnologiyalar
+                        <a href="https://play.google.com/store/apps/details?id=uz.mexboy.matematika" target="_blank">
+                            Matematika
                         </a>
                       </h3>
                       <div class="row mt-2 mt-md-3 mt-lg-5 align-items-center">
                         <div class="full-image text-center col-md-5 mb-5 mb-md-2" data-aos="zoom-in">
-                          <a href="https://play.google.com/store/apps/details?id=uz.mexboy.TAT" target="_blank">
-                            <img src="../images/projects/29/tatNewAsosiy.png" class="img-fluid shadow" style="border-radius: 5%;" alt="interview process">
+                          <a href="https://play.google.com/store/apps/details?id=uz.mexboy.matematika" target="_blank">
+                            <img src="../images/projects/31/matemAsosiy.png" class="img-fluid shadow" style="border-radius: 5%;" alt="interview process">
                           </a>
                         </div>
-                        <!-- <h1 class="col-md-7">Bu dastur <strong>Andijon davlat universiteti</strong>
-                          talabalari "Ta'limda axborot texnologiyalar" fanidan mustaqil ta'lim olishlari uchun yaratildi!</h1> -->
                           <h1 class="col-md-7">
-                            <strong>Ta'limda axborot texnologiyalar </strong> Oliy o‘quv yurtlari talabalari uchun android qurilmalarda foydalanish uchun o‘quv qo‘llanma
+                            <strong>Matematika </strong> Oliy o‘quv yurtlari talabalari uchun android qurilmalarda foydalanish uchun o‘quv qo‘llanma
                           </h1>
                       </div>
                     </div>
@@ -113,21 +111,18 @@
 
                       <h2 class="text-center text-md-left">Dastur haqida...</h2>
 
-                      <p class="mt-4">5112200 – Makrabgacha va boshlangich ta'limda xorijiy til (tillar bo'yicha), <br>
-                        5111400 – xorijiy til va adabiyoti (tillar bo'yicha) <br>
-                        5120100 – Filologiya va tillarni o'qitish (rimsko-germanskaya filologiya), <br>
-                        5120200 – Tarjima nazariyasi va amaliyoti (tillar bo'yicha), <br>
-                        5121200 – Madaniyatlararo komunikatsiyalarning lingvistik ta'minoti (tillar bo'yicha) bakalavr ta'lim yo'nalishi talabalari uchun elektron darslik</p>
+                      <p class="mt-4" style="text-indent: 1.5rem;">
+                        Matematika fanidan barcha foydalanishi uchun elektron darslik bo'lib, u yordamida fan mo'yicha avvalgi bilimlarni mustahmaklash va yangi ko'nikmalarga ega bo'lish ishlab chiqildi.</p>
                       <p style="text-indent: 1.5rem;">
-                        Bu elektron qo'llanma Z. Madaminovning muallifligi asosida yaratildi. <br>
-                          <a href="https://play.google.com/store/apps/details?id=uz.mexboy.TAT" target="_blank" style="text-decoration: underline;">
+                        Bu elektron qo'llanma A. Axlimirzayevning muallifligi asosida yaratildi. <br>
+                          <a href="https://play.google.com/store/apps/details?id=uz.mexboy.matematika" target="_blank" style="text-decoration: underline;">
                             Yuklab olish...</a>
                       </p>
                   </div>
 
                   <div class="col-md-5 col-12 text-center">
-                    <a href="https://play.google.com/store/apps/details?id=uz.mexboy.TAT" target="_blank">
-                      <img src="../images/projects/29/tatNewQosh.png" class="img-fluid shadow mt-5" style="border-radius: 5%;" alt="personal website" data-aos="zoom-in">
+                    <a href="https://play.google.com/store/apps/details?id=uz.mexboy.matematika" target="_blank">
+                      <img src="../images/projects/31/matemQosh.png" class="img-fluid shadow mt-5" style="border-radius: 5%;" alt="personal website" data-aos="zoom-in">
                     </a>
                   </div>
                </div>
